--- a/index.html
+++ b/index.html
@@ -7,7 +7,11 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <section class="container principal">
     <h1>Com o Combo+, você pode aproveitar a Alura+ e o Alura Língua por um preço único.</h1>
+    <img src="/assets/Combo.png" alt="Logo da Alura Plus, combo">
+
+    </section>
     
 </body>
 </html>
