Atualização fsemi final site alura.

--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
 </head>
 <body>
+
+//primeira seção da pagina criada
+
     <section class="container principal">
     <div class="container__caixa">
         <h1 class="container__titulo">Com o Combo+, você pode aproveitar a Alura+ e o Alura Língua por um preço único.</h1>
@@ -20,6 +23,8 @@
     </div>
     </section>
 
+//segunda seção da pagina criada
+
     <section class="container secundario">
         <img src="./assets/Plataformas.png" alt="Um monitor e um celular com o alura plus aberto" class="secundario__img">
         <div class="container__descricao">
@@ -27,8 +32,82 @@
             <p class="descricao__texto">Aproveite a tela grande da TV ou assista no tablet, laptop, celular e outros aparelhos. 
                 Nossa seleção de cursos não para de crescer.</p>
         </div>
-
     </section>
+
+//terceira seção da pagina criada
+
+    <section class="container terceiro">
+        <div class="container__descricao">
+            <p class="descricao__texto">Só o Combo+ oferece Alura+ e Alura Língua juntos para você ter acesso a cursos de 
+                diversas áreas da tecnologia e aprender inglês ou espanhol, onde e como quiser..</p>
+            <a href="http://alura.com.br" class="container__botao secundario__botao">Assine o Combo+</a>
+
+        </div>
+        <img src="./assets/Telas.png" alt="Telas de dispositivos com o alura plus aberto" class="terceiro__img">
+    </section>
+
+//quarta seção da pagina criada
+
+    <section class="container quarto">
+        <img src="./assets/Notebook.png" alt="Um notebook com o alura plus aberto" class="quarto__img">
+        <div class="container__descricao">
+            <h2 class="descricao__titulo">Baixe seus cursos</h2>
+            <p class="descricao__texto">Baixe e assista quando e onde quiser. Assim, seus favoritos estão sempre com você, 
+                até mesmo sem internet.</p>
+        </div>
+    </section>
+
+    <section class="dispositivos">
+        <h2 class="dispositivos__titulo">Disponivel nos seus dispositivos favoritos</h2>
+        <ul class="dispositivos__lista">
+            <li>
+                <img src="./assets/tv.png" alt="Imagem da televisão" class="item__img">
+                <h3 class="lista__item">TV</h3>
+            </li>
+            <li>
+                <img src="./assets/computador.png" alt="Imagem do computador" class="item__img">
+                <h3 class="lista__item">Computador</h3>
+            </li>
+            <li>
+                <img src="./assets/celular.png" alt="Imagem do celular" class="item__img">
+                <h3 class="lista__item">Celular</h3>    
+            </li>
+        </ul>
+    </section>
+
+    <footer class="footer">
+       <img src="./assets/alurapluslogo.png" alt="Logo da Alura Plus" class="footer__logo">
+       <ul class="footer__lista">
+        <li class="lista__link">
+            <a href="http://alura.com.br" class="link__item">Idioma</a>
+        </li>
+        <li class="lista__link">
+            <a href="http://alura.com.br" class="link__item">Dispositivos compátiveis</a>
+        </li>
+        <li class="lista__link">
+            <a href="http://alura.com.br" class="link__item">Contrato de assinatura</a>
+        </li>
+        <li class="lista__link">
+            <a href="http://alura.com.br" class="link__item">Política de privacidade</a>    
+        </li>
+        <li class="lista__link">
+            <a href="http://alura.com.br" class="link__item">Proteção de dados no Brasil</a>
+        </li>
+        <li class="lista__link">
+            <a href="http://alura.com.br" class="link__item">Anuncios personalizados</a>
+        </li>
+        <li class="lista__link">
+            <a href="http://alura.com.br" class="link__item">Ajuda</a>
+        </li>
+
+       </ul>
+
+         <p class="footer__texto">® 2021 Alura, Alura+ e Alura Língua. Todos os direitos reservados. Serviço de assinatura paga. Conteúdo sujeito a disponibilidade.</p>
+         <p class="footer__texto">Alura+ é um serviço pago, baseado em assinatura e sujeito a termos e condições. O serviço Alura+ é comercializado por Aovs 
+            Sistemas de Informática S.A., Rua Vergueiro, 3185 - Liberdade, São Paulo - SP, 04101-300, Brasil e CNPJ 05.555.382/0001-33</p>  
+       
+
+    </footer>
     
 </body>
 </html>     
